--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <strong class="app__title-strong">mergulhe no que importa.</strong>
             </h1>
             <figure class="app__image-figure">
-                <img class="app__image" src="/imagens/foco.png" alt="">
+                <img class="app__image" src="/imagens/imagens/Default_A_human_with_a_TV_for_a_head_1_df171c74-04d8-495a-a025-f6c745ed3d68_0.png" alt="">
             </figure>
         </section>
         <section class="app__section-card-container">
